fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "На жаль, під час збереження колекції сталася помилка",
   "Add a description": "Додати опис",
   "Overview": "Overview",
+  "Popular": "Popular",
   "Recently updated": "Нещодавно оновлені",
   "Recently published": "Нещодавно опубліковані",
   "Least recently updated": "Останнє оновлення",
@@ -783,7 +784,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Створені мною",
-  "Weird, this shouldn’t ever be empty": "Дивно, це ніколи не повинно бути порожнім",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Ви ще не створили жодного документу",
   "Documents you’ve recently viewed will be here for easy access": "Документи, які ви нещодавно переглянули, будуть тут, для легкого доступу",
   "{{ count }} invites sent": "{{ count }} invites sent",
