--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -314,8 +314,6 @@
   "Objects": "物品",
   "Symbols": "符号",
   "Flags": "标志",
-  "Select a color": "选择颜色",
-  "Loading": "加载中",
   "View only": "仅浏览",
   "Can edit": "可编辑",
   "No access": "无访问权限",
@@ -450,6 +448,8 @@
   "Installation": "安装",
   "Unstar document": "取消收藏文档",
   "Star document": "收藏文档",
+  "Select a color": "选择颜色",
+  "Loading": "加载中",
   "Template created, go ahead and customize it": "模板已创建，继续进行自定义",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "从 <em>{{titleWithDefault}}</em> 创建模板是一个非破坏性的操作 - 我们将制作一个文档副本，并将其变成一个可以用作新文档起点的模板。",
   "Enable other members to use the template immediately": "允许其他成员立即使用该模板",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "抱歉，保存文档集时出错",
   "Add a description": "添加描述",
   "Overview": "概览",
+  "Popular": "Popular",
   "Recently updated": "最近更新",
   "Recently published": "最近发布",
   "Least recently updated": "最近最少更新",
@@ -783,7 +784,8 @@
   "Something went wrong": "出现了一些错误",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "抱歉，加载页面时发生未知错误。请重试，如果问题仍然存在，请与支持者联系。",
   "Created by me": "由我创建",
-  "Weird, this shouldn’t ever be empty": "奇怪，这里不应该是空的",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "你尚未创建任何文档",
   "Documents you’ve recently viewed will be here for easy access": "你最近浏览过的文档将放在此处以方便快速访问",
   "{{ count }} invites sent": "{{ count }} invites sent",
