fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -314,8 +314,6 @@
   "Objects": "物品",
   "Symbols": "符號",
   "Flags": "旗幟",
-  "Select a color": "選擇顏色",
-  "Loading": "正在讀取",
   "View only": "只可檢視",
   "Can edit": "可以編輯",
   "No access": "無存取權限",
@@ -450,6 +448,8 @@
   "Installation": "安裝",
   "Unstar document": "取消星號",
   "Star document": "標示星號",
+  "Select a color": "選擇顏色",
+  "Loading": "正在讀取",
   "Template created, go ahead and customize it": "範本已經建立，繼續將其客製化",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "從 <em>{{titleWithDefault}}</em> 建立範本是不會對原本的文件造成影響－我們會將文件複製後並將其轉換為可以用來建立新文件的範本。",
   "Enable other members to use the template immediately": "允許其它成員立即使用此範本",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "抱歉，儲存到文件集時發生了錯誤。",
   "Add a description": "新增描述",
   "Overview": "概覽",
+  "Popular": "Popular",
   "Recently updated": "最近更新",
   "Recently published": "最近發布",
   "Least recently updated": "很久以前更新",
@@ -783,7 +784,8 @@
   "Something went wrong": "發生了某些錯誤",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "由我建立的",
-  "Weird, this shouldn’t ever be empty": "怪了，這不應該是空的",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "您還沒有建立任何文件",
   "Documents you’ve recently viewed will be here for easy access": "您最近檢視過的文件會被列於此方便您快速存取",
   "{{ count }} invites sent": "{{ count }} invites sent",
