--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Đối tượng",
   "Symbols": "Biểu tượng",
   "Flags": "Cờ",
-  "Select a color": "Chọn Màu",
-  "Loading": "Đang tải",
   "View only": "Chỉ xem",
   "Can edit": "Có thể chỉnh sửa",
   "No access": "Không có quyền truy cập",
@@ -450,6 +448,8 @@
   "Installation": "Cài đặt",
   "Unstar document": "Bỏ sao tài liệu",
   "Star document": "Đánh sao tài liệu",
+  "Select a color": "Chọn Màu",
+  "Loading": "Đang tải",
   "Template created, go ahead and customize it": "Đã tạo mẫu, hãy tiếp tục và tùy chỉnh nó",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Đang tạo mẫu từ <em>{{titleWithDefault}}</em> là một hành động không phá hủy - chúng tôi sẽ tạo một bản sao của tài liệu và biến nó thành một mẫu có thể được sử dụng làm điểm bắt đầu cho các tài liệu mới.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Xin lỗi, đã xảy ra lỗi khi lưu bộ sưu tập",
   "Add a description": "Thêm mô tả",
   "Overview": "Tổng quan",
+  "Popular": "Popular",
   "Recently updated": "Mới cập nhật",
   "Recently published": "Mới đăng tải",
   "Least recently updated": "Cập nhật ít nhất gần đây",
@@ -783,7 +784,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Được tạo bởi tôi",
-  "Weird, this shouldn’t ever be empty": "Cái này không bao giờ được để trống",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Bạn chưa tạo bất kỳ tài liệu nào",
   "Documents you’ve recently viewed will be here for easy access": "Các tài liệu bạn đã xem gần đây sẽ ở đây để dễ dàng truy cập",
   "{{ count }} invites sent": "{{ count }} invites sent",
