--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objetos",
   "Symbols": "Símbolos",
   "Flags": "Bandeiras",
-  "Select a color": "Selecione uma cor",
-  "Loading": "Carregando",
   "View only": "Somente visualização",
   "Can edit": "Pode editar",
   "No access": "Sem acesso",
@@ -450,6 +448,8 @@
   "Installation": "Instalação",
   "Unstar document": "Desfavoritar documento",
   "Star document": "Favoritar documento",
+  "Select a color": "Selecione uma cor",
+  "Loading": "Carregando",
   "Template created, go ahead and customize it": "Modelo criado, vá em frente e personalize-o",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Criar um modelo a partir de <em>{{titleWithDefault}}</em> é uma ação não destrutiva — faremos uma cópia do documento e o transformaremos em um modelo que pode ser usado como ponto de partida para novos documentos.",
   "Enable other members to use the template immediately": "Permitir que outros membros usem o modelo imediatamente",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Desculpe, ocorreu um erro ao salvar a coleção",
   "Add a description": "Adicionar uma descrição",
   "Overview": "Visão geral",
+  "Popular": "Popular",
   "Recently updated": "Atualizado recentemente",
   "Recently published": "Publicado recentemente",
   "Least recently updated": "Menos recentemente atualizados",
@@ -783,7 +784,8 @@
   "Something went wrong": "Algo deu errado",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Desculpe, ocorreu um erro desconhecido ao carregar a página. Tente novamente ou entre em contato com o suporte se o problema continuar.",
   "Created by me": "Criado por mim",
-  "Weird, this shouldn’t ever be empty": "Estranho, isso nunca deveria estar vazio",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Você ainda não criou nenhum documento",
   "Documents you’ve recently viewed will be here for easy access": "Os documentos que você visualizou recentemente estarão aqui para facilitar o acesso",
   "{{ count }} invites sent": "{{ count }} invites sent",
