fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objects",
   "Symbols": "Symbols",
   "Flags": "Flags",
-  "Select a color": "Pilih warna",
-  "Loading": "Memuat",
   "View only": "Hanya melihat",
   "Can edit": "Can edit",
   "No access": "Tidak memiliki akses",
@@ -450,6 +448,8 @@
   "Installation": "Pemasangan",
   "Unstar document": "Unstar document",
   "Star document": "Star document",
+  "Select a color": "Pilih warna",
+  "Loading": "Memuat",
   "Template created, go ahead and customize it": "Template telah dibuat, silakan disesuaikan",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Membuat template dari <em>{{titleWithDefault}}</em> adalah tindakan yang tidak merusak – kami akan membuat salinan dokumen dan mengubahnya menjadi template yang dapat digunakan sebagai titik awal untuk dokumen baru.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Maaf, terjadi kesalahan saat menyimpan koleksi",
   "Add a description": "Tambahkan keterangan",
   "Overview": "Overview",
+  "Popular": "Popular",
   "Recently updated": "Baru diperbarui",
   "Recently published": "Baru diterbitkan",
   "Least recently updated": "Baru-baru ini diperbarui",
@@ -783,7 +784,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Dibuat oleh saya",
-  "Weird, this shouldn’t ever be empty": "Aneh, ini seharusnya tidak pernah kosong",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Anda belum membuat dokumen apa pun",
   "Documents you’ve recently viewed will be here for easy access": "Dokumen yang baru saja Anda lihat akan ada di sini agar mudah diakses",
   "{{ count }} invites sent": "{{ count }} invites sent",
