--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -314,8 +314,6 @@
   "Objects": "اشیاء",
   "Symbols": "نمادها",
   "Flags": "علامت‌ها",
-  "Select a color": "یک رنگ را انتخاب کنید",
-  "Loading": "بارگذاری",
   "View only": "فقط مشاهده",
   "Can edit": "قابل ویرایش",
   "No access": "بدون دسترسی",
@@ -450,6 +448,8 @@
   "Installation": "نسخه",
   "Unstar document": "حذف ستاره از سند",
   "Star document": "ستاره‌دار کردن سند",
+  "Select a color": "یک رنگ را انتخاب کنید",
+  "Loading": "بارگذاری",
   "Template created, go ahead and customize it": "الگو ایجاد شد، پیش بروید و آن را سفارشی کنید",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "ایجاد الگو از <em>{{titleWithDefault}}</em> باعث تخریب چیزی نمی‌شود - ما یک کپی از سند ایجاد می کنیم و آن را به الگویی تبدیل می کنیم که می تواند به عنوان نقطه شروع اسناد جدید استفاده شود.",
   "Enable other members to use the template immediately": "امکان استفادهٔ فوری دیگر اعضا از قالب فراهم شود",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "متاسفانه خطایی در ذخیره‌سازی مجموعه رخ داد",
   "Add a description": "توضیحاتی اضافه کنید",
   "Overview": "بررسی کلی",
+  "Popular": "Popular",
   "Recently updated": "آخرین به‌روزرسانی",
   "Recently published": "آخرین انتشار",
   "Least recently updated": "اولین به‌روزرسانی",
@@ -783,7 +784,8 @@
   "Something went wrong": "مشکلی پیش آمد",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "متأسفانه، خطای ناشناخته‌ای در بارگذاری صفحه رخ داده است. لطفاً دوباره تلاش کنید یا در صورت ادامه مشکل، با پشتیبانی تماس بگیرید.",
   "Created by me": "ایجاد شده توسط من",
-  "Weird, this shouldn’t ever be empty": "عجیب است، این هرگز نباید خالی باشد",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "شما هنوز هیچ سندی ایجاد نکرده‌اید",
   "Documents you’ve recently viewed will be here for easy access": "اسنادی که اخیراً مشاهده کرده اید برای دسترسی آسان در اینجا خواهند بود",
   "{{ count }} invites sent": "{{ count }} دعوت‌نامه ارسال شد",
