fix: New Thai translations from Crowdin [ci skip]

--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Objects",
   "Symbols": "Symbols",
   "Flags": "Flags",
-  "Select a color": "Select a color",
-  "Loading": "กำลังโหลด",
   "View only": "ดูเท่านั้น",
   "Can edit": "Can edit",
   "No access": "ไม่มีการเข้าถึง",
@@ -450,6 +448,8 @@
   "Installation": "การติดตั้ง",
   "Unstar document": "Unstar document",
   "Star document": "Star document",
+  "Select a color": "Select a color",
+  "Loading": "กำลังโหลด",
   "Template created, go ahead and customize it": "สร้างเทมเพลตแล้ว ปรับแต่งได้เลย",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "การสร้างเทมเพลตจาก <em>{{titleWithDefault}}</em> เป็นการกระทำที่ไม่ทำลายเอกสารเก่า - เราจะทำสำเนาและเปลี่ยนเป็นเทมเพลตที่สามารถใช้ในการสร้างเอกสารใหม่ได้",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "ขออภัย เกิดข้อผิดพลาดขณะบันทึกคอลเลคชั่น",
   "Add a description": "เพิ่มคำอธิบาย",
   "Overview": "Overview",
+  "Popular": "Popular",
   "Recently updated": "Recently updated",
   "Recently published": "Recently published",
   "Least recently updated": "Least recently updated",
@@ -783,7 +784,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Created by me",
-  "Weird, this shouldn’t ever be empty": "Weird, this shouldn’t ever be empty",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "You haven’t created any documents yet",
   "Documents you’ve recently viewed will be here for easy access": "Documents you’ve recently viewed will be here for easy access",
   "{{ count }} invites sent": "{{ count }} invites sent",
