fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -314,8 +314,6 @@
   "Objects": "Gjenstander",
   "Symbols": "Symboler",
   "Flags": "Flagg",
-  "Select a color": "Velg en farge",
-  "Loading": "Laster",
   "View only": "Bare vis",
   "Can edit": "Kan redigere",
   "No access": "Ingen tilgang",
@@ -450,6 +448,8 @@
   "Installation": "Installasjon",
   "Unstar document": "Fjern stjerne fra dokument",
   "Star document": "Stjernemarker dokument",
+  "Select a color": "Velg en farge",
+  "Loading": "Laster",
   "Template created, go ahead and customize it": "Mal opprettet, gå videre og tilpass den",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Å opprette en mal fra <em>{{titleWithDefault}}</em> er en ikke-destruktiv handling – vi vil lage en kopi av dokumentet og gjøre det til en mal som kan brukes som utgangspunkt for nye dokumenter.",
   "Enable other members to use the template immediately": "Tillat andre medlemmer å bruke malen nå",
@@ -666,6 +666,7 @@
   "Sorry, an error occurred saving the collection": "Beklager, det oppstod en feil ved lagring av samlingen",
   "Add a description": "Legg til en beskrivelse",
   "Overview": "Oversikt",
+  "Popular": "Popular",
   "Recently updated": "Nylig oppdatert",
   "Recently published": "Nylig publisert",
   "Least recently updated": "Minst nylig oppdatert",
@@ -783,7 +784,8 @@
   "Something went wrong": "Noe gikk galt",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Beklager, en ukjent feil oppstod under lasting av siden. Prøv igjen, eller kontakt brukerstøtte hvis problemet vedvarer.",
   "Created by me": "Opprettet av meg",
-  "Weird, this shouldn’t ever be empty": "Rart, dette burde aldri være tomt",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Du har ikke opprettet noen dokumenter ennå",
   "Documents you’ve recently viewed will be here for easy access": "Dokumenter du nylig har sett vil være her for enkel tilgang",
   "{{ count }} invites sent": "{{ count }} invites sent",
