fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -352,8 +352,8 @@
   "Reaction picker": "Sélecteur de réaction",
   "Could not load reactions": "Impossible de charger les réactions",
   "Reaction": "Réaction",
-  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m read",
-  "{{ hours }}h read": "{{ hours }}h read",
+  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m de lecture",
+  "{{ hours }}h read": "{{ hours }}h de lecture",
   "{{ minutes }}m read": "{{ minutes }}m de lecture",
   "Revision deleted": "Révision supprimée",
   "Current version": "Version actuelle",
@@ -666,7 +666,7 @@
   "Sorry, an error occurred saving the collection": "Désolé, une erreur s'est produite lors de l'enregistrement de la collection",
   "Add a description": "Ajouter une description",
   "Overview": "Aperçu",
-  "Popular": "Popular",
+  "Popular": "Populaire",
   "Recently updated": "Récemment mis à jour",
   "Recently published": "Récemment publiés",
   "Least recently updated": "Anciennement modifiés",
@@ -784,8 +784,8 @@
   "Something went wrong": "Un problème est survenu",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Désolé ! Une erreur inconnue s'est produite lors du chargement de la page. Merci de réessayer ou de contacter l'assistance si l'erreur perdure.",
   "Created by me": "Créé par moi",
-  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
-  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
+  "Weird, this shouldn't ever be empty": "Étrange, cela ne devrait jamais être vide",
+  "Documents with recent activity will appear here": "Les documents ayant une activité récente apparaîtront ici",
   "You haven’t created any documents yet": "Vous n'avez pas encore créé de documents",
   "Documents you’ve recently viewed will be here for easy access": "Les documents que vous avez récemment consultés seront facilement accessibles ici",
   "{{ count }} invites sent": "{{ count }} invitations envoyées",
