--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -1068,9 +1068,9 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "These settings affect the way that your workspace appears to everyone on the team.",
   "Display": "Відобразити",
   "The logo is displayed at the top left of the application.": "Логотип відображається у верхньому лівому кутку програми.",
-  "Workspace logo": "Workspace logo",
+  "Workspace logo": "Логотип робочої області",
   "The workspace name, usually the same as your company name.": "Назва робочого простору, зазвичай, така сама як назва вашої компанії.",
-  "A short description of your workspace.": "A short description of your workspace.",
+  "A short description of your workspace.": "Короткий опис робочої області.",
   "Theme": "Тема",
   "Customize the interface look and feel.": "Налаштуйте зовнішній вигляд інтерфейсу.",
   "Reset theme": "Скинути тему",
