select mutiple documents

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -96,14 +96,31 @@
   "Move": "Move",
   "Move to collection": "Move to collection",
   "Move {{ documentType }}": "Move {{ documentType }}",
+  "Move selected": "Move selected",
+  "Archive selected": "Archive selected",
+  "Are you sure you want to archive these documents?": "Are you sure you want to archive these documents?",
   "Are you sure you want to archive this document?": "Are you sure you want to archive this document?",
+  "{{count}} documents archived": "{{count}} documents archived",
+  "{{count}} documents archived_plural": "{{count}} documents archived",
   "Document archived": "Document archived",
+  "Archiving these documents will remove them from the collection and search results.": "Archiving these documents will remove them from the collection and search results.",
   "Archiving this document will remove it from the collection and search results.": "Archiving this document will remove it from the collection and search results.",
+  "Restore selected": "Restore selected",
+  "{{count}} documents restored": "{{count}} documents restored",
+  "{{count}} documents restored_plural": "{{count}} documents restored",
   "{{ documentName }} restored": "{{ documentName }} restored",
+  "Couldn't restore the documents, try again?": "Couldn't restore the documents, try again?",
+  "Couldn't restore the document, try again?": "Couldn't restore the document, try again?",
   "Choose a collection": "Choose a collection",
+  "Delete selected": "Delete selected",
   "Delete {{ documentName }}": "Delete {{ documentName }}",
+  "Delete {{count}} documents": "Delete {{count}} documents",
+  "Delete {{count}} documents_plural": "Delete {{count}} documents",
+  "Permanently delete selected": "Permanently delete selected",
   "Permanently delete": "Permanently delete",
   "Permanently delete {{ documentName }}": "Permanently delete {{ documentName }}",
+  "Permanently delete {{count}} documents": "Permanently delete {{count}} documents",
+  "Permanently delete {{count}} documents_plural": "Permanently delete {{count}} documents",
   "Empty trash": "Empty trash",
   "Permanently delete documents in trash": "Permanently delete documents in trash",
   "Comments": "Comments",
@@ -771,17 +788,40 @@
   "Observing {{ userName }}": "Observing {{ userName }}",
   "Backlinks": "Backlinks",
   "This document is large which may affect performance": "This document is large which may affect performance",
+  "Failed to load documents": "Failed to load documents",
+  "{{count}} documents deleted": "{{count}} documents deleted",
+  "{{count}} documents deleted_plural": "{{count}} documents deleted",
+  "Document deleted": "Document deleted",
+  "Couldn't delete the documents, try again?": "Couldn't delete the documents, try again?",
+  "Couldn't delete the document, try again?": "Couldn't delete the document, try again?",
+  "Couldn't archive the documents, try again?": "Couldn't archive the documents, try again?",
+  "Couldn't archive the document, try again?": "Couldn't archive the document, try again?",
+  "Loading documents...": "Loading documents...",
+  "Loading document...": "Loading document...",
+  "Unable to load documents": "Unable to load documents",
+  "Are you sure you want to delete these <em>{{count}} templates</em>?": "Are you sure you want to delete these <em>{{count}} templates</em>?",
+  "Are you sure about that? Deleting these <em>{{count}} documents</em>will delete all of their history and combined <em>{{nestedCount}} nested documents</em>.": "Are you sure about that? Deleting these <em>{{count}} documents</em>will delete all of their history and combined <em>{{nestedCount}} nested documents</em>.",
+  "Are you sure about that? Deleting these <em>{{count}} documents</em> will delete all of their history.": "Are you sure about that? Deleting these <em>{{count}} documents</em> will delete all of their history.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?",
-  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.",
-  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.",
-  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>._plural": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested documents</em>.",
-  "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.": "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.",
+  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ nestedCount }} nested document</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ nestedCount }} nested document</em>.",
+  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ nestedCount }} nested document</em>._plural": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ nestedCount }} nested document</em>.",
+  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history.",
+  "If you'd like the option of referencing or restoring these documents in the future, consider archiving them instead.": "If you'd like the option of referencing or restoring these documents in the future, consider archiving them instead.",
+  "If you'd like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.": "If you'd like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.",
+  "I'm sure – Delete": "I'm sure – Delete",
   "Select a location to move": "Select a location to move",
+  "Couldn't move the documents, try again?": "Couldn't move the documents, try again?",
+  "Couldn't move the document, try again?": "Couldn't move the document, try again?",
+  "You don't have permission to move these documents": "You don't have permission to move these documents",
+  "You don't have permission to move this document": "You don't have permission to move this document",
   "Document moved": "Document moved",
-  "Couldn’t move the document, try again?": "Couldn’t move the document, try again?",
-  "Move to <em>{{ location }}</em>": "Move to <em>{{ location }}</em>",
+  "{{count}} documents moved": "{{count}} documents moved",
+  "{{count}} documents moved_plural": "{{count}} documents moved",
   "Couldn’t create the document, try again?": "Couldn’t create the document, try again?",
+  "{{count}} documents permanently deleted": "{{count}} documents permanently deleted",
+  "{{count}} documents permanently deleted_plural": "{{count}} documents permanently deleted",
   "Document permanently deleted": "Document permanently deleted",
+  "Are you sure you want to permanently delete these <em>{{count}} documents</em>? This action is immediate and cannot be undone.": "Are you sure you want to permanently delete these <em>{{count}} documents</em>? This action is immediate and cannot be undone.",
   "Are you sure you want to permanently delete the <em>{{ documentTitle }}</em> document? This action is immediate and cannot be undone.": "Are you sure you want to permanently delete the <em>{{ documentTitle }}</em> document? This action is immediate and cannot be undone.",
   "Select a location to publish": "Select a location to publish",
   "Document published": "Document published",
