fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Vous avez quitté le document partagé",
   "Could not leave document": "Impossible de quitter le document",
   "Apply template": "Appliquer le modèle",
+  "Disconnect": "Se déconnecter",
   "Disconnect analytics": "Déconnecter les statistiques",
   "Home": "Accueil",
   "Drafts": "Brouillons",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Les collections n'ont pas pu être chargées, veuillez recharger la page",
   "Start view": "Page d'accueil",
   "Install now": "Installer maintenant",
-  "Disconnect": "Se déconnecter",
-  "Disconnecting": "Déconnexion en cours",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Êtes-vous sûr de vouloir déconnecter l'intégration <em>{{ service }}</em>?",
-  "This will stop sending analytics events to the configured instance.": "Ceci arrêtera d'envoyer des événements de statistiques à l'instance configurée.",
   "Deleted Collection": "Collection supprimée",
   "Untitled": "Sans titre",
   "Unpin": "Désépingler",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "Afficher, naviguer ou télécharger des images dans le document",
   "Zoom in": "Zoom avant",
   "Zoom out": "Zoom arrière",
+  "Edit diagram": "Edit diagram",
   "Close": "Fermer",
   "Previous": "Précédent",
   "Next": "Suivant",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Voulez-vous vraiment supprimer le jeton {{ tokenName }}?",
   "Disconnect integration": "Déconnecter l'intégration",
   "Connected": "Connecté",
+  "Disconnecting": "Déconnexion en cours",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Êtes-vous sûr de vouloir déconnecter l'intégration <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "Ceci arrêtera d'envoyer des événements de statistiques à l'instance configurée.",
   "Allowed domains": "Domaines autorisés",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domaines autorisés à créer de nouveaux comptes en utilisant le SSO. La modification de ce paramètre n'affecte pas les comptes d'utilisateurs existants.",
   "Remove domain": "Supprimer le domaine",
@@ -1220,6 +1221,9 @@
   "Expires today": "Expire aujourd'hui",
   "Expires tomorrow": "Expire demain",
   "Expires {{ date }}": "Expire le {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "Nouvel attribut",
   "Paper size": "Taille du papier",
   "Ask AI \"{{question}}\"": "Demander à l'IA \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Créé par vous il y a {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "Créé par {{ user }} il y a {{ timeAgo }}",
   "Caption": "Légende",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Ouvrir",
   "Error loading data": "Erreur de chargement des données"
 }
