--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Has abandonado el documento compartido",
   "Could not leave document": "No se pudo abandonar el documento",
   "Apply template": "Aplicar plantilla",
+  "Disconnect": "Desconectar",
   "Disconnect analytics": "Desconectar analítica",
   "Home": "Inicio",
   "Drafts": "Borradores",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "No se pudieron cargar las colecciones, por favor recarga la aplicación",
   "Start view": "Vista inicial",
   "Install now": "Instalar ahora",
-  "Disconnect": "Desconectar",
-  "Disconnecting": "Desconectando",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "¿Estás seguro de que quieres desconectar la integración <em>{{ service }}</em>?",
-  "This will stop sending analytics events to the configured instance.": "Esto dejará de enviar eventos analíticos a la instancia configurada.",
   "Deleted Collection": "Colección Eliminada",
   "Untitled": "Sin título",
   "Unpin": "Desfijar",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Cerrar",
   "Previous": "Previous",
   "Next": "Siguiente",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "¿Estás seguro de que quieres revocar el token {{ tokenName }}?",
   "Disconnect integration": "Desconectar integración",
   "Connected": "Conectado",
+  "Disconnecting": "Desconectando",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "¿Estás seguro de que quieres desconectar la integración <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "Esto dejará de enviar eventos analíticos a la instancia configurada.",
   "Allowed domains": "Dominios permitidos",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Los dominios que deberían poder crear nuevas cuentas usando SSO. Cambiar esta configuración no afecta a las cuentas de usuario existentes.",
   "Remove domain": "Eliminar dominio",
@@ -1220,6 +1221,9 @@
   "Expires today": "Expira hoy",
   "Expires tomorrow": "Expira mañana",
   "Expires {{ date }}": "Expira el {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Tú lo creaste {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} lo creó {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error al cargar datos"
 }
