--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Opustil jste sdílený dokument",
   "Could not leave document": "Nepodařilo se opustit dokument",
   "Apply template": "Apply template",
+  "Disconnect": "Odpojit",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Domovská stránka",
   "Drafts": "Koncepty",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Sbírky se nepodařilo načíst, prosím načtěte aplikaci znovu",
   "Start view": "Domovská obrazovka",
   "Install now": "Nainstalovat",
-  "Disconnect": "Odpojit",
-  "Disconnecting": "Odpojování",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Odstraněná sbírka",
   "Untitled": "Bez názvu",
   "Unpin": "Zrušit připnutí",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Zavřít",
   "Previous": "Previous",
   "Next": "Next",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Skutečně chcete zrušit token {{ tokenName }}?",
   "Disconnect integration": "Odebrat integraci",
   "Connected": "Připojeno",
+  "Disconnecting": "Odpojování",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Povolené domény",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domény, které by měly mít povoleno vytvářet nové účty pomocí SSO. Změna tohoto nastavení nemá vliv na stávající uživatelské účty.",
   "Remove domain": "Odstranit doménu",
@@ -1220,6 +1221,9 @@
   "Expires today": "Vyprší dnes",
   "Expires tomorrow": "Vyprší zítra",
   "Expires {{ date }}": "Vyprší {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Vytvořili jste před {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} vytvořil před {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
