fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Sie haben das geteilte Dokument verlassen",
   "Could not leave document": "Dokument konnte nicht verlassen werden",
   "Apply template": "Vorlage übernehmen",
+  "Disconnect": "Trennen",
   "Disconnect analytics": "Analytics trennen",
   "Home": "Startseite",
   "Drafts": "Entwürfe",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Sammlungen konnten nicht geladen werden, bitte lade die App neu",
   "Start view": "Startseite",
   "Install now": "Jetzt installieren",
-  "Disconnect": "Trennen",
-  "Disconnecting": "Trenne",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sind Sie sicher, dass Sie die <em>{{ service }}</em> Integration trennen möchten?",
-  "This will stop sending analytics events to the configured instance.": "Dies stoppt das Senden von Analyseereignissen an die konfigurierte Instanz.",
   "Deleted Collection": "Gelöschte Sammlung",
   "Untitled": "Ohne Titel",
   "Unpin": "Lospinnen",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "Bilder im Dokument anzeigen, navigieren oder herunterladen",
   "Zoom in": "Vergrößern",
   "Zoom out": "Verkleinern",
+  "Edit diagram": "Edit diagram",
   "Close": "Schließen",
   "Previous": "Zurück",
   "Next": "Nächste",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Sind Sie sicher, den Token {{ tokenName }} zu widerrufen?",
   "Disconnect integration": "Integration trennen",
   "Connected": "Verbunden",
+  "Disconnecting": "Trenne",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sind Sie sicher, dass Sie die <em>{{ service }}</em> Integration trennen möchten?",
+  "This will stop sending analytics events to the configured instance.": "Dies stoppt das Senden von Analyseereignissen an die konfigurierte Instanz.",
   "Allowed domains": "Erlaubte Domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Die Domänen, die mit SSO neue Konten erstellen dürfen. Das Ändern dieser Einstellung wirkt sich nicht auf bestehende Benutzerkonten aus.",
   "Remove domain": "Domäne entfernen",
@@ -1220,6 +1221,9 @@
   "Expires today": "Läuft heute ab",
   "Expires tomorrow": "Läuft morgen ab",
   "Expires {{ date }}": "Läuft am {{ date }} ab",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Papierformat",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Du hast vor {{ timeAgo }} erstellt",
   "{{ user }} created {{ timeAgo }}": "{{ user }} erstellte vor {{ timeAgo }}",
   "Caption": "Beschriftung",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Öffnen",
   "Error loading data": "Fehler beim Laden der Daten"
 }
