--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Elhagytad a megosztott dokumentumot",
   "Could not leave document": "Nem lehet menteni a dokumentumot",
   "Apply template": "Sablon használata",
+  "Disconnect": "Megszakít",
   "Disconnect analytics": "Analitika leválasztása",
   "Home": "Kezdőlap",
   "Drafts": "Piszkozatok",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "A gyűjtemények nem tölthetők be, kérem töltse újra a programot",
   "Start view": "Kezdje el",
   "Install now": "Telepítés most",
-  "Disconnect": "Megszakít",
-  "Disconnecting": "Kapcsolat megszakítása",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Biztos vagy benne, hogy le akarod választani a {{ service }} integrációt?",
-  "This will stop sending analytics events to the configured instance.": "Ez megállítja az analitikai események küldését a beállított fogadónak.",
   "Deleted Collection": "Törölt gyűjtemény",
   "Untitled": "Névtelen",
   "Unpin": "Feloldás",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Nagyítás",
   "Zoom out": "Kicsinyítés",
+  "Edit diagram": "Edit diagram",
   "Close": "Bezár",
   "Previous": "Előző",
   "Next": "Következő",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connected",
+  "Disconnecting": "Kapcsolat megszakítása",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Biztos vagy benne, hogy le akarod választani a {{ service }} integrációt?",
+  "This will stop sending analytics events to the configured instance.": "Ez megállítja az analitikai események küldését a beállított fogadónak.",
   "Allowed domains": "Allowed domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.",
   "Remove domain": "Remove domain",
@@ -1220,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Ön hozta létre {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
