fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Hai lasciato il documento condiviso",
   "Could not leave document": "Impossibile lasciare il documento",
   "Apply template": "Applica modello",
+  "Disconnect": "Disconnetti",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Home",
   "Drafts": "Bozze",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Impossibile caricare le raccolte, per favore ricarica l'app",
   "Start view": "Schermata iniziale",
   "Install now": "Installa ora",
-  "Disconnect": "Disconnetti",
-  "Disconnecting": "Disconnessione in corso",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sei sicuro di voler disconnettere l'integrazione con <em>{{ service }}</em>?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Raccolte Eliminate",
   "Untitled": "Senza titolo",
   "Unpin": "Rimuovi contrassegno",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "Visualizza, naviga, o scarica immagini nel documento",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Chiudi",
   "Previous": "Precedente",
   "Next": "Successivo",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Sei sicuro di voler revocare il token {{ tokenName }}?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connesso",
+  "Disconnecting": "Disconnessione in corso",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sei sicuro di voler disconnettere l'integrazione con <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Domini consentiti",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "I domini che dovrebbero essere autorizzati a creare nuovi account utilizzando SSO. La modifica di questa impostazione non influisce sugli utenti esistenti.",
   "Remove domain": "Rimuovi dominio",
@@ -1220,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
