fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "共有ドキュメントから退出しました",
   "Could not leave document": "ドキュメントから退出することができませんでした",
   "Apply template": "Apply template",
+  "Disconnect": "接続を解除",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "ホーム",
   "Drafts": "下書き",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "コレクションを読み込めませんでした。アプリを再読み込みしてください。",
   "Start view": "起動時の画面",
   "Install now": "インストールしています",
-  "Disconnect": "接続を解除",
-  "Disconnecting": "切断中",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "削除したコレクション",
   "Untitled": "無題のドキュメント",
   "Unpin": "ピン留めを外す",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "閉じる",
   "Previous": "Previous",
   "Next": "Next",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "トークン {{ tokenName }} を失効します\nよろしいですか？",
   "Disconnect integration": "連携を解除",
   "Connected": "接続されました",
+  "Disconnecting": "切断中",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "許可されているドメイン",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "SSO を使用して新しいアカウントを作成できるドメイン。この設定を変更しても、既存のユーザーには影響しません。",
   "Remove domain": "ドメインを削除",
@@ -1220,6 +1221,9 @@
   "Expires today": "今日で期限切れ",
   "Expires tomorrow": "明日で期限切れ",
   "Expires {{ date }}": "期限: {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "あなたが {{ timeAgo }} に作成しました",
   "{{ user }} created {{ timeAgo }}": "{{ user }} が {{ timeAgo }} に作成しました",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "データ読込エラー"
 }
